--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -4,10 +4,11 @@
         <file alias="main">basket.png</file>
         <file alias="new">knotes.png</file>
         <file alias="hide">hide-icon.png</file>
+        <file alias="show">show-icon.png</file>
         <file alias="prop">preferences-other.png</file>
         <file alias="del">user-trash-full.png</file>
     </qresource>
-    <!-- COMPILATION:
-    rcc -g python -o resources.py resources/resources.qrc
-    after that change PySide2 to PyQt6 -->
+    <qresource prefix="i18n">
+        <file>qsticky_pl.qm</file>
+    </qresource>
 </RCC>
